# py_lumina

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cannonball_trajectory.csv  pyproject.toml
cpp/bindings/: pybind_module.cpp
cpp/collision/: collision.cpp  collision.h
cpp/engine/: batch_particles.h  integrator.cpp  physics_engine.cpp  physics_engine.h
cpp/forces/: drag.cpp  forces_impl.h  gravity.cpp  wind.cpp
docs/: architecture.md  usage.md
examples/: basic_simulation.py  batch_particles.py  box_stacking.py  combined_chaos.py  consumer_demo.py  particle_demo.py  wind_simulation.py
py_lumina/: __init__.py  forces.py  renderer.py  simulation.py  utils.py
src/cpp/bindings/: py_lumina_bindings.cpp
src/cpp/include/: engine.hpp  forces.hpp  particle.hpp  rigid_body.hpp  vector3d.hpp
src/pylumina/: __init__.py  cli.py  environment.py  renderer.py  simulation.py
src/pylumina/exporters/: __init__.py  hdf5_exporter.py  vtk_exporter.py
src/pylumina/physics/: __init__.py  drag.py  gravity.py  wind.py
src/pylumina/utils/: __init__.py  math_helpers.py
tests/: test_collisions.py  test_forces.py  test_physics_engine.py  test_simulation.py
