[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.11",
    "cmake>=3.15",
    "scikit-build-core>=0.5",
]
build-backend = "scikit_build_core.build"

[project]
name = "py_lumina"
version = "0.1.0"
description = "High-performance physics simulation library with a C++ core engine and Pythonic API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "py_lumina contributors"},
]
keywords = [
    "physics", "simulation", "rigid-body", "gravity",
    "drag", "wind", "pybind11", "C++", "high-performance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/py_lumina"
Repository = "https://github.com/yourusername/py_lumina"
Issues = "https://github.com/yourusername/py_lumina/issues"
Documentation = "https://github.com/yourusername/py_lumina#readme"

[tool.scikit-build]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
